# mezura

./: .gitignore  Cargo.toml  Changelog  LICENSE  README.md  instructions.txt
benches/: bench_parsing.rs
data/config/: C.txt  default.txt  default_config.txt  this.txt  unity.txt
data/extensions/: cpp.txt  go.txt  js.txt  python.txt
data/languages/: C#.txt  C++.txt  C.txt  CSS.txt  HTML.txt  JAI.txt  Kotlin.txt  PHP.txt  R.txt  SCSS.txt  Swift.txt  cs.txt  java.txt  js.txt  python.txt  ts.txt
executable/linux (ubuntu)/release/: mezura
executable/linux (ubuntu)/release/data/languages/: java.txt  python.txt
executable/release/data/extensions/: java.txt  rs.txt
executable/release/data/languages/: go.txt  js.txt  ts.txt
executable/windows/release/data/config/: default.txt
executable/windows/release/data/languages/: cpp.txt  rs.txt
extensions/: cs.txt  java.txt
src/: cmd_arg_parser.rs  conc_test.rs  config_manager.rs  consumer.rs  data_reader.rs  extension_reader.rs  file_parser.rs  file_scraper.rs  help_message_printer.rs  io_handler.rs  lib.rs  main.rs  message_printer.rs  my_reader.rs  producer.rs  result_printer.rs  test.rs  utils.rs
src/putils/: macros.rs  mod.rs  traits.rs  utils.rs
test_dir/: a.java  a.txt  b.txt  d.txt
test_dir/config/: auto-generated.txt  test.txt
test_dir/lang_files/: c.txt
test_dir/languages/: C++.txt  Java.txt  Rust.txt
test_dir/logs/: test  test1  test2
tests/: integration_test.rs
tests/extensions/: java.txt
