[package]
name = "mezura"
version = "1.0.0-beta1"
authors = ["subamanis <petrospapa21@gmail.com>"]
edition = "2018"
default-run = "mezura"

[[bin]]
name = "mezura"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/benchmarks.rs"

[dependencies]
colored = "2"
lazy_static = "1.4.0"
chrono = "0.4.19"
crossbeam-deque = "0.8"
num_cpus = "1.13.0"